tests/snapshots/snapshot__ambiguous_width_chars_are_narrow.snap
---
source: tests/snapshot.rs
expression: "frame(8, 1, \"❯±°→※\".as_bytes())"
---
[
  {
    "t": "default_colors",
    "fg": 13684944,
    "bg": 0,
    "sp": 13684944
  },
  {
    "t": "grid_clear"
  },
  {
    "t": "grid_line",
    "row": 0,
    "col": 0,
    "cells": [
      [
        "❯",
        0
      ],
      [
        "±"
      ],
      [
        "°"
      ],
      [
        "→"
      ],
      [
        "※"
      ],
      [
        " ",
        0,
        3
      ]
    ]
  },
  {
    "t": "cursor",
    "row": 0,
    "col": 5,
    "visible": true,
    "shape": "block"
  },
  {
    "t": "mode",
    "alt_screen": false
  },
  {
    "t": "flush"
  }
]
