tests/snapshots/snapshot__combining_marks_join_their_base_cell.snap
---
source: tests/snapshot.rs
expression: "frame(8, 1, \"か\\u{3099}e\\u{0301}\".as_bytes())"
---
[
  {
    "t": "default_colors",
    "fg": 13684944,
    "bg": 0,
    "sp": 13684944
  },
  {
    "t": "grid_clear"
  },
  {
    "t": "grid_line",
    "row": 0,
    "col": 0,
    "cells": [
      [
        "が",
        0
      ],
      [
        ""
      ],
      [
        "é"
      ],
      [
        " ",
        0,
        5
      ]
    ]
  },
  {
    "t": "cursor",
    "row": 0,
    "col": 3,
    "visible": true,
    "shape": "block"
  },
  {
    "t": "mode",
    "alt_screen": false
  },
  {
    "t": "flush"
  }
]
