tests/snapshots/snapshot__cursor_shape_bar_is_reported.snap
---
source: tests/snapshot.rs
expression: "frame(4, 1, b\"\\x1b[6 qX\")"
---
[
  {
    "t": "default_colors",
    "fg": 13684944,
    "bg": 0,
    "sp": 13684944
  },
  {
    "t": "grid_clear"
  },
  {
    "t": "grid_line",
    "row": 0,
    "col": 0,
    "cells": [
      [
        "X",
        0
      ],
      [
        " ",
        0,
        3
      ]
    ]
  },
  {
    "t": "cursor",
    "row": 0,
    "col": 1,
    "visible": true,
    "shape": "bar"
  },
  {
    "t": "mode",
    "alt_screen": false
  },
  {
    "t": "flush"
  }
]
