tests/snapshots/snapshot__erase_in_line_clears_to_end.snap
---
source: tests/snapshot.rs
expression: "frame(6, 1, b\"abcdef\\x1b[3G\\x1b[0K\")"
---
[
  {
    "t": "default_colors",
    "fg": 13684944,
    "bg": 0,
    "sp": 13684944
  },
  {
    "t": "grid_clear"
  },
  {
    "t": "grid_line",
    "row": 0,
    "col": 0,
    "cells": [
      [
        "a",
        0
      ],
      [
        "b"
      ],
      [
        " ",
        0,
        4
      ]
    ]
  },
  {
    "t": "cursor",
    "row": 0,
    "col": 2,
    "visible": true,
    "shape": "block"
  },
  {
    "t": "mode",
    "alt_screen": false
  },
  {
    "t": "flush"
  }
]
